Account has been created to be the 'main' account

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
   <div id="vue-app">
     <header>
       <div class="container">
+        <a href="/#/login">Login</a>
+        <a href="/#/logout">LogOut</a>
+        <a href="/#/signup">Signup</a>
         <h1 class="float-center"><a href="/#/">Amy Masterson</a></h1>
 
         <nav class="navbar navbar-expand-md navbar-light bg-light">
