--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,13 @@
         <a href="/#/login">Login</a>
         <a href="/#/logout">LogOut</a>
         <a href="/#/signup">Signup</a>
-        <h1 class="float-center"><a href="/#/">Amy Masterson</a></h1>
+        <h1 class="text-center"><a href="/#/">Amy Masterson</a></h1>
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="navbar float float-middle navbar-expand-md navbar-light bg-light">
           <a href="/#/mosaics" class="navbar-brand">Mosaics</a>
           <a href="/#/fiddles" class="navbar-brand">Fiddle</a>
-        </nav>
+          <a href="/#/about" class="navbar-brand">About</a>
+        </div>
       </div>
     </header>
 
@@ -119,9 +120,28 @@
   </div>
 </template>
 
+<template id="about-page">
+  <div class="vue-component">
+    <div class="container">
+      <h1>About</h1>
+      <div class="col-md-12">
+        <img src="/img/nothing.jpg" class="amy-pic float-right">
+        <div class="about-text">
+          <h3 class="text-center">Amy Masterson</h3>
+          <h5 class="text-center">amy_masterson@gmail.com</h5>
+          <p>{{message}}</p>
+          
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</template>
+
 <template id="mosaics-page">
   <div class="vue-component">
     <div class="container">
+      <h1>Mosaics Page</h1>
       <div class="row">
         <a href="/#/mosaics-create">
           <button class="btn btn-primary">Add Mosaic</button>
@@ -132,7 +152,7 @@
       </div>
       <div class="row">
         <div class="col-md-3">
-          <button class="btn btn-primary">Sort Mosaics</button>
+          <!-- <button class="btn btn-primary">Sort Mosaics</button> -->
         </div>
         <div class="col-md-9">
           <div class="card-columns">
