--- a/public/index.html
+++ b/public/index.html
@@ -111,12 +111,11 @@
 <template id="home-page">
   <div class="vue-component">
     <div class="container">
-
-      <div class="row">
-        <h1>{{ message }}</h1>
-      </div>  
-
+      <h1>{{ message }}</h1>
+      <img class="home-img" src="https://www.w3schools.com/css/img_5terre_wide.jpg">
+  
     </div>
+  
   </div>
 </template>
 
